--- a/APB.AccessControl.ManageApp/Properties/Resources.resx
+++ b/APB.AccessControl.ManageApp/Properties/Resources.resx
@@ -250,4 +250,7 @@
   <data name="SignOut" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SignOut.svg;DevExpress.Utils.Svg.SvgImage, DevExpress.Data.v24.2, Version=24.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
   </data>
+  <data name="Permissions3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Permissions3.svg;DevExpress.Utils.Svg.SvgImage, DevExpress.Data.v24.2, Version=24.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
+  </data>
 </root>
